# neural-gomoku

./: .gitignore  README.md  pyproject.toml  requirements.txt
analysis/: README.md  rapfi_failure_board_review_notes.md  rapfi_failure_board_snapshots.json  rapfi_failure_board_snapshots.md  rapfi_failure_eval_v10.csv  rapfi_failure_eval_v11.csv  rapfi_failure_eval_v12_interp_a0.05.csv  rapfi_failure_eval_v12_interp_a0.10.csv  rapfi_failure_eval_v12_interp_a0.20.csv  rapfi_failure_eval_v12_interp_a0.30.csv  rapfi_failure_eval_v12_stage1.csv  rapfi_failure_eval_v12_stage2.csv  rapfi_failure_label_summary.md  rapfi_failure_positions.csv  rapfi_failure_positions.json  rapfi_failure_set.csv  rapfi_failure_set.json  rapfi_failure_set_labeled.csv  rapfi_failure_set_labeled.json  rapfi_failure_set_preliminary_review.md  rapfi_failure_threat_analysis.csv  rapfi_failure_threat_analysis.md  v10_v11_decision_diff.csv  v11_to_v12_failure_summary.md  v12_candidate_failure_board_snapshots.json  v12_candidate_failure_board_snapshots.md  v12_candidate_failure_threat_analysis.csv  v12_candidate_failure_threat_analysis.md  v12_candidate_new_failure_analysis.md  v12_candidate_rapfi_failure_positions.csv  v12_candidate_rapfi_failure_positions.json  v12_candidate_rapfi_failure_set.csv  v12_candidate_rapfi_failure_set.json  v12_candidate_rapfi_smoke_summary.md  v12_candidate_robustness_summary.md  v12_interp_internal_gate_summary.md  v12_interpolation_failure_set_summary.md  v12_stage1_failure_eval_summary.md  v12_stage2_failure_eval_summary.md  v12_stage2_internal_gate_summary.md  (+12 more)
(+1462 files in other folders)
